# doc/openapi/cashbunny.yaml
@@ -16,6 +16,60 @@ components:
     bearerAuth:
       $ref: './api.yaml#/components/securitySchemes/bearerAuth'
 paths:
+  /api/v1/secure/cashbunny/categories:
+    get:
+      tags: 
+        - v1
+      operationId: cashbunny/listCategories
+      description: Retrieves all categories
+      summary: Retrieves all categories
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    $ref: './api.yaml#/components/schemas/error'
+                  data:
+                    example: ""
+    post:
+      tags: 
+        - v1
+      operationId: cashbunny/createCategory
+      description: Creates a category
+      summary: Creates a category
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Test account
+                description:
+                  type: string
+                  example: For savings
+              required:
+                - name
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    $ref: './api.yaml#/components/schemas/error'
   /api/v1/secure/cashbunny/accounts:
     get:
       tags: 
@@ -52,6 +106,9 @@ paths:
             schema:
               type: object
               properties:
+                category_id:
+                  type: number
+                  example: 1
                 name:
                   type: string
                   example: Test account
@@ -70,7 +127,7 @@ paths:
                   example: credit
                 order_index:
                   type: number
-                  example: 0
+                  example: 1
                   description: unsigned
               required:
                 - name
